--- a/article-office-moving.html
+++ b/article-office-moving.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>نقل المكاتب | حور - نقل عفش الكويت</title>
+  <title>نقل المكاتب في حولي | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="كيف تنقل مكتبك بدون توقف العمل وخسارة الزبائن - دليل شامل لنقل المكاتب باحترافية">
+  <meta name="description" content="كيف تنقل مكتبك في حولي بدون توقف العمل وخسارة الزبائن - دليل شامل لنقل المكاتب باحترافية في منطقة حولي">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="نقل مكاتب, نقل مكتب, نقل شركات, نقل عفش مكاتب, نقل أثاث مكتبي, نقل عفش الكويت, شركة نقل مكاتب">
+  <meta name="keywords" content="نقل مكاتب حولي, نقل مكتب حولي, نقل شركات حولي, نقل عفش مكاتب حولي, نقل أثاث مكتبي حولي, نقل عفش حولي الكويت, شركة نقل مكاتب حولي">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/article-office-moving.html" />
