--- a/article-packing-guide.html
+++ b/article-packing-guide.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>دليل التغليف الآمن | حور - نقل عفش الكويت</title>
+  <title>دليل التغليف الآمن في حولي | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="دليل شامل للتغليف الآمن للأثاث - أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية لحمايتها أثناء النقل">
+  <meta name="description" content="دليل شامل للتغليف الآمن للأثاث في حولي - أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية لحمايتها أثناء النقل في منطقة حولي">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="تغليف الأثاث, تغليف العفش, تغليف آمن, نقل أثاث آمن, تغليف الأجهزة الكهربائية, نقل عفش الكويت, شركة نقل عفش, نصائح التغليف">
+  <meta name="keywords" content="تغليف الأثاث حولي, تغليف العفش حولي, تغليف آمن حولي, نقل أثاث آمن حولي, تغليف الأجهزة الكهربائية حولي, نقل عفش حولي الكويت, شركة نقل عفش حولي, نصائح التغليف حولي">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/article-packing-guide.html" />
