--- a/article-seasonal-moving.html
+++ b/article-seasonal-moving.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>النقل الموسمي | حور - نقل عفش الكويت</title>
+  <title>النقل الموسمي في حولي | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث - أفضل أوقات نقل العفش في الكويت">
+  <meta name="description" content="توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث في حولي - أفضل أوقات نقل العفش في منطقة حولي">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="نقل موسمي, نقل عفش موسمي, أفضل أوقات النقل, نقل عفش الكويت, نقل أثاث موسمي, نصائح موسمية, نقل عفش صيفي">
+  <meta name="keywords" content="نقل موسمي حولي, نقل عفش موسمي حولي, أفضل أوقات النقل حولي, نقل عفش حولي الكويت, نقل أثاث موسمي حولي, نصائح موسمية حولي, نقل عفش صيفي حولي">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/article-seasonal-moving.html" />
