--- a/article-view.html
+++ b/article-view.html
@@ -6,10 +6,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>دليل المقالات | حور - نقل عفش الكويت</title>
+  <title>دليل المقالات في حولي | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن">
+  <meta name="description" content="تعرف على كيفية نقل أثاثك في حولي في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن في منطقة حولي">
   
   <!-- Expanded Keywords List -->
   <meta name="keywords" content="نقل سريع, نقل عفش سريع, نقل أثاث سريع, نقل عفش الكويت, شركة نقل عفش, نصائح النقل السريع, نقل آمن">
