--- a/article.html
+++ b/article.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>خدمات النقل | حور - نقل عفش الكويت</title>
-  <meta name="description" content="خدمات نقل وتغليف أثاث متكاملة بأسعار منافسة وجودة عالية">
-  <meta name="keywords" content="نقل أثاث, تغليف أثاث, فك وتركيب, خدمات نقل">
+  <title>خدمات النقل في حولي | حور - نقل عفش حولي الكويت</title>
+  <meta name="description" content="خدمات نقل وتغليف أثاث متكاملة في حولي بأسعار منافسة وجودة عالية">
+  <meta name="keywords" content="نقل أثاث حولي, تغليف أثاث حولي, فك وتركيب حولي, خدمات نقل حولي">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
