--- a/portfolio-appliances1.html
+++ b/portfolio-appliances1.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>سيارات مجهزة | حور - نقل عفش الكويت</title>
+  <title>سيارات مجهزة في حولي | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="جميع سياراتنا مصممة خصيصًا لنقل العفش، مغلقة من الداخل، ومبطنة لحماية الأغراض من الصدمات والحرارة.">
+  <meta name="description" content="جميع سياراتنا مصممة خصيصًا لنقل العفش في حولي، مغلقة من الداخل، ومبطنة لحماية الأغراض من الصدمات والحرارة.">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="سيارات نقل عفش, سيارات مبطنة, سيارات مجهزة, نقل آمن, نظام تثبيت, نقل عفش, الكويت">
+  <meta name="keywords" content="سيارات نقل عفش حولي, سيارات مبطنة حولي, سيارات مجهزة حولي, نقل آمن حولي, نظام تثبيت حولي, نقل عفش حولي, حولي الكويت">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/portfolio-appliances1.html" />
