--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -6,10 +6,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>أعمالنا | حور - نقل عفش الكويت</title>
+  <title>أعمالنا في حولي | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="استكشف أعمالنا ومشاريعنا في شركة حور لنقل العفش - خدمات تغليف، فك وتركيب، وسيارات مجهزة لنقل العفش في الكويت">
+  <meta name="description" content="استكشف أعمالنا ومشاريعنا في شركة حور لنقل العفش - خدمات تغليف، فك وتركيب، وسيارات مجهزة لنقل العفش في حولي">
   
   <!-- Expanded Keywords List -->
   <meta name="keywords" content="أعمال حور, مشاريع نقل عفش, خدمات تغليف, فك وتركيب أثاث, سيارات نقل عفش, الكويت">
