--- a/portfolio-office1.html
+++ b/portfolio-office1.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>فك وتركيب احترافي | حور - نقل عفش الكويت</title>
+  <title>فك وتركيب احترافي في حولي | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="نملك أدوات خاصة وعمالاً يعرفون جيدًا أسرار فك الأثاث الخشبي والمعدني وتركيبه دون أي ضرر أو خدش.">
+  <meta name="description" content="نملك أدوات خاصة وعمالاً يعرفون جيدًا أسرار فك الأثاث الخشبي والمعدني وتركيبه دون أي ضرر أو خدش في منطقة حولي.">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="فك أثاث, تركيب أثاث, فك وتركيب, أثاث خشبي, أثاث معدني, نقل عفش, الكويت">
+  <meta name="keywords" content="فك أثاث حولي, تركيب أثاث حولي, فك وتركيب حولي, أثاث خشبي حولي, أثاث معدني حولي, نقل عفش حولي, حولي الكويت">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/portfolio-office1.html" />
