--- a/portfolio-storage1.html
+++ b/portfolio-storage1.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>خدمات التخزين | حور - نقل عفش الكويت</title>
-  <meta content="خدمات التخزين الآمنة والمتخصصة من هور للنقل والتخزين. حلول تخزين مرنة وآمنة لجميع احتياجاتك" name="description">
-  <meta content="تخزين, مستودعات, تخزين آمن, هور, نقل وتخزين" name="keywords">
+  <title>خدمات التخزين في حولي | حور - نقل عفش حولي الكويت</title>
+  <meta content="خدمات التخزين الآمنة والمتخصصة من هور للنقل والتخزين في حولي. حلول تخزين مرنة وآمنة لجميع احتياجاتك في منطقة حولي" name="description">
+  <meta content="تخزين حولي, مستودعات حولي, تخزين آمن حولي, هور حولي, نقل وتخزين حولي" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
