--- a/service-details.html
+++ b/service-details.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>تفاصيل الخدمة | حور - نقل عفش الكويت</title>
-  <meta name="description" content="خدمات نقل العفش في الكويت من حور - نقل، فك، تركيب، وتغليف آمن بأحدث الأدوات. فريق مدرب، تغطية شاملة، تواصل معنا 66401171">
+  <title>تفاصيل الخدمة في حولي | حور - نقل عفش حولي الكويت</title>
+  <meta name="description" content="خدمات نقل العفش في حولي من حور - نقل، فك، تركيب، وتغليف آمن بأحدث الأدوات. فريق مدرب، تغطية شاملة لمنطقة حولي، تواصل معنا 66401171">
   <meta name="keywords" content="نقل عفش الكويت, نقل أثاث الكويت, فك وتركيب أثاث, شركة نقل عفش, Home Mover, تغليف عفش, نقل سريع, 66401171, نقل عفش من الباب للباب, شركة نقل موثوقة الكويت, نقل عفش رخيص, أفضل شركة نقل عفش, خدمات نقل العفش, نقل أثاث محترف, نقل مكاتب, نقل منازل, نقل أجهزة كهربائية, نقل أثاث فاخر, تغليف الأثاث, نقل معدات ثقيلة, نقل بضائع تجارية, نقل شقق صغيرة, نقل الفلل, الكويت">
   <link rel="canonical" href="https://naqlafsha-hoor.com/service-details.html" />
   <meta property="og:title" content="خدمات نقل العفش | حور - نقل عفش الكويت" />
