--- a/article-speed-moving.html
+++ b/article-speed-moving.html
@@ -6,13 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Enhanced Title Tag with Primary Keyword First -->
-  <title>النقل السريع للعفش | حور - نقل عفش الكويت</title>
+  <title>النقل السريع للعفش في حولي | حور - نقل عفش حولي الكويت</title>
   
   <!-- Enhanced Meta Description -->
-  <meta name="description" content="تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن">
+  <meta name="description" content="تعرف على كيفية نقل أثاثك في حولي في وقت قياسي مع الحفاظ على سلامته - نصائح عملية لنقل سريع وآمن في منطقة حولي">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="نقل سريع, نقل عفش سريع, نقل أثاث سريع, نقل عفش الكويت, شركة نقل عفش, نصائح النقل السريع, نقل آمن">
+  <meta name="keywords" content="نقل سريع حولي, نقل عفش سريع حولي, نقل أثاث سريع حولي, نقل عفش حولي الكويت, شركة نقل عفش حولي, نصائح النقل السريع حولي, نقل آمن حولي">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://naqlafsha-hoor.com/article-speed-moving.html" />
